--- a/src/CommandAPI/CommandAPI.csproj
+++ b/src/CommandAPI/CommandAPI.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>4F2AEC97-48F1-435C-AE13-86EA5E51627D</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
