Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,12 @@
 trigger:
 - master
-pool: AgentPool
+
+pool: 
+  vmImage: 'ubuntu-latest'
+
 variables:
   buildConfiguration: 'Release'
+
 steps:
 - task: UseDotNet@2
 - script: dotnet build --configuration $(buildConfiguration)
